# src/main/java/com/hei/wallet/wallety/endpoint/rest/GlobalExceptionHandler.java
@@ -2,6 +2,7 @@ package com.hei.wallet.wallety.endpoint.rest;
 
 import com.hei.wallet.wallety.exception.ApiErrorResponse;
 import com.hei.wallet.wallety.exception.ApiException;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
@@ -13,6 +14,15 @@ public class GlobalExceptionHandler {
         return new ResponseEntity<>(
                 new ApiErrorResponse(error.getMessage(), error.getStatus()),
                 error.getStatus()
+        );
+    }
+
+    @ExceptionHandler({RuntimeException.class})
+    public ResponseEntity<ApiErrorResponse> handleRuntimeException(RuntimeException error) {
+        error.printStackTrace();
+        return new ResponseEntity<>(
+                new ApiErrorResponse("Internal Server Error", HttpStatus.INTERNAL_SERVER_ERROR),
+                HttpStatus.INTERNAL_SERVER_ERROR
         );
     }
 }
